test/correct/ShowSpecials.hs
module ShowSpecials where


main = (show EQ, show (Just 'a'))
   