test/typeerrors/Heuristics/TupleInsert2.hs
module TupleInsert2 where

main :: (String,Int,Int,Bool)
main = ("hallo",True)
